[改版-接案] 依google表單內容修改

--- a/css/styles.css
+++ b/css/styles.css
@@ -2317,10 +2317,9 @@ section#contact-her .text-danger {
     position: relative;
     /* top: -80px; */
     /* padding-top: 20px; */
-    color: #e51b67;
     /* margin-top: -1px; */
     border-top: 1px solid #fff;
-    background-image: url(../img/herlady-banner.png);
+    background-image: url(../img/herlady-banner-1.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     height: 630px;
