[改版-case] 更換banner圖片

--- a/css/styles.css
+++ b/css/styles.css
@@ -2319,7 +2319,7 @@ section#contact-her .text-danger {
     /* padding-top: 20px; */
     /* margin-top: -1px; */
     border-top: 1px solid #fff;
-    background-image: url(../img/herlady-banner-1.jpg);
+    background-image: url(../img/herlady-banner.png);
     background-size: cover;
     background-repeat: no-repeat;
     height: 630px;
